邮件验证码测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,12 @@ spring.thymeleaf.content-type = text/html
 spring.thymeleaf.enabled = true
 
 spring.thymeleaf.encoding = UTF-8
+
+#mail send
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.qq.com
+spring.mail.username=2433373618@qq.com
+spring.mail.password=qbibrxdgeplmebie
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
