--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
 
     </dependencies>
 
